// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar closable 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      可关闭
    </react-native-mock>
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <react-native-mock />
        <react-native-mock />
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`NoticeBar onClick 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        NoticeBar
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`NoticeBar renders correctly 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      错误色
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`NoticeBar scroll 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        各位zarmer请注意，本组件使用了自动滚动功能，更多用法请参见使用文档。
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`NoticeBar theme 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      This is a NoticeBar
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;
